--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "tailwindcss": "^3.4.0",
         "vite": "^6.0.11",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "vuedraggable": "^4.1.0"
     }
 }
